Practica2_201520557/calc_project/build/parser.output
La regla es inútil debido a los conflictos

   12 expr: '(' expr ')'


Estado 18 conflictos: 6 reducción/reducción


Gramática

    0 $accept: input $end

    1 input: ε
    2      | input line

    3 line: '\n'
    4     | expr '\n'
    5     | error '\n'

    6 expr: expr '+' expr
    7     | expr '-' expr
    8     | expr '*' expr
    9     | expr '/' expr
   10     | '-' expr
   11     | '(' expr ')'
   12     | '(' expr ')'
   13     | NUMBER


Terminales con las reglas donde aparecen

    $end (0) 0
    '\n' (10) 3 4 5
    '(' (40) 11 12
    ')' (41) 11 12
    '*' (42) 8
    '+' (43) 6
    '-' (45) 7 10
    '/' (47) 9
    error (256) 5
    NUMBER <num> (258) 13
    UMINUS (259)


No terminales con las reglas donde aparecen

    $accept (12)
        on left: 0
    input (13)
        on left: 1 2
        on right: 0 2
    line (14)
        on left: 3 4 5
        on right: 2
    expr <num> (15)
        on left: 6 7 8 9 10 11 12 13
        on right: 4 6 7 8 9 10 11 12


Estado 0

    0 $accept: • input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


Estado 1

    0 $accept: input • $end
    2 input: input • line

    $end    desplazar e ir al estado 2
    error   desplazar e ir al estado 3
    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '\n'    desplazar e ir al estado 6
    '('     desplazar e ir al estado 7

    line  ir al estado 8
    expr  ir al estado 9


Estado 2

    0 $accept: input $end •

    $default  aceptar


Estado 3

    5 line: error • '\n'

    '\n'  desplazar e ir al estado 10


Estado 4

   13 expr: NUMBER •

    $default  reduce usando la regla 13 (expr)


Estado 5

   10 expr: '-' • expr

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 11


Estado 6

    3 line: '\n' •

    $default  reduce usando la regla 3 (line)


Estado 7

   11 expr: '(' • expr ')'
   12     | '(' • expr ')'

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 12


Estado 8

    2 input: input line •

    $default  reduce usando la regla 2 (input)


Estado 9

    4 line: expr • '\n'
    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr

    '+'   desplazar e ir al estado 13
    '-'   desplazar e ir al estado 14
    '*'   desplazar e ir al estado 15
    '/'   desplazar e ir al estado 16
    '\n'  desplazar e ir al estado 17


Estado 10

    5 line: error '\n' •

    $default  reduce usando la regla 5 (line)


Estado 11

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   10     | '-' expr •

    $default  reduce usando la regla 10 (expr)


Estado 12

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
   11     | '(' expr • ')'
   12     | '(' expr • ')'

    '+'  desplazar e ir al estado 13
    '-'  desplazar e ir al estado 14
    '*'  desplazar e ir al estado 15
    '/'  desplazar e ir al estado 16
    ')'  desplazar e ir al estado 18


Estado 13

    6 expr: expr '+' • expr

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 19


Estado 14

    7 expr: expr '-' • expr

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 20


Estado 15

    8 expr: expr '*' • expr

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 21


Estado 16

    9 expr: expr '/' • expr

    NUMBER  desplazar e ir al estado 4
    '-'     desplazar e ir al estado 5
    '('     desplazar e ir al estado 7

    expr  ir al estado 22


Estado 17

    4 line: expr '\n' •

    $default  reduce usando la regla 4 (line)


Estado 18

   11 expr: '(' expr ')' •
   12     | '(' expr ')' •

    '+'       reduce usando la regla 11 (expr)
    '+'       [reduce usando la regla 12 (expr)]
    '-'       reduce usando la regla 11 (expr)
    '-'       [reduce usando la regla 12 (expr)]
    '*'       reduce usando la regla 11 (expr)
    '*'       [reduce usando la regla 12 (expr)]
    '/'       reduce usando la regla 11 (expr)
    '/'       [reduce usando la regla 12 (expr)]
    '\n'      reduce usando la regla 11 (expr)
    '\n'      [reduce usando la regla 12 (expr)]
    ')'       reduce usando la regla 11 (expr)
    ')'       [reduce usando la regla 12 (expr)]
    $default  reduce usando la regla 11 (expr)


Estado 19

    6 expr: expr • '+' expr
    6     | expr '+' expr •
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr

    '*'  desplazar e ir al estado 15
    '/'  desplazar e ir al estado 16

    $default  reduce usando la regla 6 (expr)


Estado 20

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    7     | expr '-' expr •
    8     | expr • '*' expr
    9     | expr • '/' expr

    '*'  desplazar e ir al estado 15
    '/'  desplazar e ir al estado 16

    $default  reduce usando la regla 7 (expr)


Estado 21

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    8     | expr '*' expr •
    9     | expr • '/' expr

    $default  reduce usando la regla 8 (expr)


Estado 22

    6 expr: expr • '+' expr
    7     | expr • '-' expr
    8     | expr • '*' expr
    9     | expr • '/' expr
    9     | expr '/' expr •

    $default  reduce usando la regla 9 (expr)
